--- a/hima/experiments/temporal_pooling/configs/new_tm.yaml
+++ b/hima/experiments/temporal_pooling/configs/new_tm.yaml
@@ -184,7 +184,6 @@ models:
     - compute TM:
         - embed_input.sdr -> TM.feedforward.sdr
         - TM.compute()
-        - TM.compare_with_prediction()
         - TM.active_cells.sdr -> TM.state.sdr
     - learn decoder:
         - embed_input.sdr -> decoder.feedback.sdr
@@ -208,9 +207,8 @@ models:
     - embed input:
         - input.sdr -> embed_input.sdr
     - compute TM:
-        - embed_input.sdr ~> TM.feedforward.sdr
+        - embed_input.sdr -> TM.feedforward.sdr
         - TM.compute()
-        - TM.compare_with_prediction()
         - TM.active_cells.sdr -> TM.state.sdr
     - learn decoder:
         - embed_input.sdr -> decoder.feedback.sdr
@@ -230,6 +228,45 @@ models:
         - concat.output.sdr -> decoder.feedforward.sdr
         - decoder.decode()
         - decoder.output.sdr -> input_prediction.sdr
+    - embed input:
+        - input.sdr -> embed_input.sdr
+    - compute TM^1:
+        - embed_input.sdr -> TM.feedforward.sdr
+        - TM.compute()
+        - TM.compare_with_prediction()
+        - TM.active_cells.sdr -> TM.state.sdr
+    - compute TM^2:
+        - TM.active_cells.sdr -> TM2.feedforward.sdr
+        - TM2.compute()
+        - TM2.compare_with_prediction()
+        - TM2.active_cells.sdr -> TM2.state.sdr
+    - learn decoder:
+        - embed_input.sdr -> decoder.feedback.sdr
+        - decoder.learn()
+    - predict input w/ posterior belief:
+        - TM.state.sdr -> concat.feedforward_#1.sdr
+        - concat.compute()
+        - concat.output.sdr -> decoder.feedforward.sdr
+        - decoder.decode()
+        - decoder.output.sdr -> input_posterior_prediction.sdr
+#        - decoder.learn()
+
+  STM2_att:
+    - predict input w/ prior belief on 1st iter than bootstrap using prediction as input:
+        - TM.reset_ff()
+        - repeat: 2
+          do:
+            - TM2.predict()
+            - TM2.predicted_cells.sdr -> concat.feedforward_#2.sdr
+            - TM.predict()
+            - TM.predicted_cells.sdr -> concat.feedforward_#1.sdr
+            - decoder.decode()
+            - decoder.output.sdr -> TM.feedforward.sdr
+            - concat.compute()
+            - concat.output.sdr -> decoder.feedforward.sdr
+            - decoder.decode()
+            - decoder.output.sdr -> input_prediction.sdr
+    - decoder.output.sdr -> input_prediction.sdr
     - embed input:
         - input.sdr -> embed_input.sdr
     - compute TM^1:
@@ -324,6 +361,7 @@ TM:
     output_mode: binary
     learning_algo: new
     normalize_rates: true
+    sample_winners: false
   lstm:
     _type_: tm.lstm
     seed: ???
