sr experiment: update AnimalAI configs

--- a/hima/experiments/successor_representations/configs/environment/animalai/default.yaml
+++ b/hima/experiments/successor_representations/configs/environment/animalai/default.yaml
@@ -1,4 +1,7 @@
 play: False
 useCamera: True
 useRayCasts: False
-
+timescale: 1 #300
+targetFrameRate: -1
+captureFrameRate: 30 # 0
+inference: True
