add learn_on_sdr decoder param to base config

--- a/hima/experiments/temporal_pooling/configs/_base.yaml
+++ b/hima/experiments/temporal_pooling/configs/_base.yaml
@@ -427,6 +427,7 @@ decoder:
     epoch_size: 1_000
     total_updates_required: 1_000_000
     collect_errors: False
+    learn_on_sdr: False
 
 # additional params for wandb.init
 wandb_init:
