rework all tracked metricks and SP health check computation

--- a/hima/experiments/temporal_pooling/configs/new_tm.yaml
+++ b/hima/experiments/temporal_pooling/configs/new_tm.yaml
@@ -51,7 +51,7 @@ model:
 
   track:
     # SDR Tracking
-    - name: input.sequence.sdr
+    - name: input.sdr
       tracker: trackers.sdr
       on:
         sdr_updated: input.sdr
