--- a/hima/experiments/temporal_pooling/configs/_base.yaml
+++ b/hima/experiments/temporal_pooling/configs/_base.yaml
@@ -333,6 +333,7 @@ spatial_pooler:
     seed: ???
     # input
     feedforward_sds: ???
+    adapt_to_ff_sparsity: False
     initial_max_rf_sparsity: 0.5
     initial_rf_to_input_ratio: 10.0
     target_max_rf_sparsity: 0.25
@@ -345,30 +346,81 @@ spatial_pooler:
     newborn_pruning_stages: 20
     newborn_pruning_mode: powerlaw
     prune_grow_cycle: 200.0
-    adapt_to_ff_sparsity: False
     boosting_k: 0.5
   default_layer:
     _type_: sp.layer
-    _base_: default
+    seed: ???
     # input
+    feedforward_sds: ???
+    connectable_ff_size: ???
+    adapt_to_ff_sparsity: False
     initial_max_rf_sparsity: 0.1
     initial_rf_to_input_ratio: 5.0
     target_max_rf_sparsity: 0.1
     target_rf_to_input_ratio: 0.5
     # learning
     learning_rate: 0.01
+    learning_algo: new
     newborn_pruning_cycle: 10.0
     newborn_pruning_stages: 5
     newborn_pruning_mode: powerlaw
     prune_grow_cycle: 20.0
-    adapt_to_ff_sparsity: False
     boosting_k: 0.25
-    # new params
+    # output
+    output_sds: ???
     output_mode: binary
-    learning_algo: new
-    normalize_rates: true
-    connectable_ff_size: ???
     sample_winners: false
+    normalize_rates: true
+
+  default_layer_mc:
+    _type_: sp.layer_mc
+    global_config: ???
+    seed: ???
+
+    # compartments
+    compartments: ???
+    compartments_config: ???
+    compartments_weight: ???
+
+    # learning
+    learning_rate: 0.01
+    learning_algo: new
+    # newborn
+    newborn_pruning_cycle: 100.0
+    newborn_pruning_stages: 20
+    newborn_pruning_mode: powerlaw
+    prune_grow_cycle: 20.0
+    boosting_k: 0.25
+    # output
+    output_sds: ???
+    output_mode: binary
+    sample_winners: false
+    normalize_rates: true
+
+  default_layer_mc_db:
+    _type_: sp.layer
+    seed: ???
+    # input
+    feedforward_sds: ???
+    connectable_ff_size: ...
+    adapt_to_ff_sparsity: False
+    initial_rf_to_input_ratio: 100.0
+    initial_max_rf_sparsity: 0.6
+    target_max_rf_sparsity: 0.1
+    target_rf_to_input_ratio: 0.75
+    # learning
+    learning_rate: 0.01
+    learning_algo: new
+    newborn_pruning_cycle: 50.0
+    newborn_pruning_stages: 20
+    newborn_pruning_mode: powerlaw
+    prune_grow_cycle: 20.0
+    boosting_k: 0.25
+    # output
+    output_sds: ???
+    output_mode: binary
+    sample_winners: false
+    normalize_rates: true
 
 
 spatial_temporal_pooler:
