--- a/hima/experiments/temporal_pooling/configs/_base.yaml
+++ b/hima/experiments/temporal_pooling/configs/_base.yaml
@@ -469,7 +469,8 @@ decoder:
     feedforward_sds: ???
     output_sds: ???
     weights_scale: 0.01
-    learning_rate: 0.0002
+#    learning_rate: 0.0002
+    learning_rate: 0.0005
 #    power_t: 0.1
     power_t: 0.00
     epoch_size: 1_000
